--- a/Supervised Machine Learning Model for Predicting Bank Churners.ipynb
+++ b/Supervised Machine Learning Model for Predicting Bank Churners.ipynb
@@ -1524,7 +1524,7 @@
               "      <td>5</td>\n",
               "      <td>Graduate</td>\n",
               "      <td>Single</td>\n",
-              "      <td>Less than 40K</td>\n",
+              "      <td>Less than "$"40K</td>\n",
               "      <td>Blue</td>\n",
               "      <td>44</td>\n",
               "      <td>6</td>\n",
@@ -1576,7 +1576,7 @@
               "      <td>4</td>\n",
               "      <td>High School</td>\n",
               "      <td>Unknown</td>\n",
-              "      <td>Less than 40K</td>\n",
+              "      <td>Less than "$"40K</td>\n",
               "      <td>Blue</td>\n",
               "      <td>34</td>\n",
               "      <td>3</td>\n",
@@ -2026,7 +2026,7 @@
               "      <td>5</td>\n",
               "      <td>Graduate</td>\n",
               "      <td>Single</td>\n",
-              "      <td>Less than $40K</td>\n",
+              "      <td>Less than "$"40K</td>\n",
               "      <td>Blue</td>\n",
               "      <td>44</td>\n",
               "      <td>6</td>\n",
@@ -2118,7 +2118,7 @@
               "      <td>4</td>\n",
               "      <td>High School</td>\n",
               "      <td>Unknown</td>\n",
-              "      <td>Less than $40K</td>\n",
+              "      <td>Less than "$"40K</td>\n",
               "      <td>Blue</td>\n",
               "      <td>34</td>\n",
               "      <td>3</td>\n",
