Deleted other single $ signs
Because it affected the display of the table

--- a/Supervised Machine Learning Model for Predicting Bank Churners.ipynb
+++ b/Supervised Machine Learning Model for Predicting Bank Churners.ipynb
@@ -1959,11 +1959,11 @@
               "      <th>Marital_Status_Married</th>\n",
               "      <th>Marital_Status_Single</th>\n",
               "      <th>Marital_Status_Unknown</th>\n",
-              "      <th>Income_Category_$120K +</th>\n",
+              "      <th>Income_Category_120K +</th>\n",
               "      <th>Income_Category_$40K - $60K</th>\n",
               "      <th>Income_Category_$60K - $80K</th>\n",
               "      <th>Income_Category_$80K - $120K</th>\n",
-              "      <th>Income_Category_Less than $40K</th>\n",
+              "      <th>Income_Category_Less than 40K</th>\n",
               "      <th>Income_Category_Unknown</th>\n",
               "      <th>Card_Category_Blue</th>\n",
               "      <th>Card_Category_Gold</th>\n",
@@ -2309,11 +2309,11 @@
               "      <th>Marital_Status_Married</th>\n",
               "      <th>Marital_Status_Single</th>\n",
               "      <th>Marital_Status_Unknown</th>\n",
-              "      <th>Income_Category_$120K +</th>\n",
+              "      <th>Income_Category_120K +</th>\n",
               "      <th>Income_Category_$40K - $60K</th>\n",
               "      <th>Income_Category_$60K - $80K</th>\n",
               "      <th>Income_Category_$80K - $120K</th>\n",
-              "      <th>Income_Category_Less than $40K</th>\n",
+              "      <th>Income_Category_Less than 40K</th>\n",
               "      <th>Income_Category_Unknown</th>\n",
               "      <th>Card_Category_Blue</th>\n",
               "      <th>Card_Category_Gold</th>\n",
