Update and rename Vehicles_Image_Classification_with_CNNs_using_Keras.ipynb to Vehicle_Type_Detection.ipynb

--- a/Vehicle_Type_Detection.ipynb
+++ b/Vehicle_Type_Detection.ipynb
@@ -20,7 +20,7 @@
       "version": "3.6.8"
     },
     "colab": {
-      "name": "Vehicles Image Classification with CNNs using Keras.ipynb",
+      "name": "Vehicle_Type_Detection.ipynb",
       "provenance": [],
       "toc_visible": true
     }
@@ -32,7 +32,7 @@
         "id": "I_z-vYRnKPIv"
       },
       "source": [
-        "# Vehicles Image Classification with CNNs using Keras"
+        "# Vehicle Type Detection"
       ]
     },
     {
